--- a/MountainCar_v0_Agent.ipynb
+++ b/MountainCar_v0_Agent.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/zuhouralsaqa/zuhouralsaqa/blob/reinforcement-learning/MountainCar_v0_Agent.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8pvCroIuFH08"
       },
       "source": [
@@ -1154,7 +1164,9 @@
         "8QoA9LyyhNOt",
         "boTKi5di_k05"
       ],
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyO1iuDWj3sUZRsOjg9SFYtz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
